[package]
name = "version-swap"
version = "0.1.0"
edition = "2021"
description = "A tool for swapping between and launching different versions of the Skryim game engine."
license = "Parity-7.0.0"
keywords = [
  "cli",
  "skyrim",
  "skse",
  "gaming"
]

[dependencies]
clap = { version = "4.4.11", features = ["derive", "wrap_help"] }
crc32fast = "1.3.2"
eyre = "0.6.9"
log = "0.4.20"
simplelog = { git = "https://github.com/Drakulix/simplelog.rs.git", features = ["paris"] }
subprocess = "0.2.9"
